# Auto-Instagram

./: .env.template  README.md  auto_manager.py  auto_posting.py  auto_reporter.py  config.py  prompt.py  pyproject.toml
data/csv/aikorea121/: add_accounts.csv  follow_list.csv
data/csv/dev_meme121/: add_accounts.csv  follow_list.csv
data/csv/purinpurin_store/: add_accounts.csv  follow_list.csv
static/: j2_template.html
