[tool.poetry]
name = "instagram"
version = "3.10.13"
description = ""
authors = ["sjwang <sjwang@ksystem.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium-wire = "^5.1.0"
openai = "^1.10.0"
python-dotenv = "^1.0.0"
fake-useragent = "^1.4.0"
webdriver-manager = "^4.0.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.4"
twilio = "^8.11.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
setuptools = "^69.0.3"
pyperclip = "^1.8.2"
jinja2 = "^3.1.3"
kaleido = "0.2.1"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
